Update chillerlan/php-httpinterface JSON
Make it match berlioz/http-message, as both load an in-development
version of the implementation.

--- a/chillerlan-php-httpinterface/composer.json
+++ b/chillerlan-php-httpinterface/composer.json
@@ -2,6 +2,8 @@
     "require": {
         "chillerlan/php-httpinterface": "dev-master"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
         "vendor-dir": ""
     }
