Second batch of providers

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,18 @@ bulldog-http-factory-zend-diactoros/*
 !bulldog-http-factory-zend-diactoros/composer.json
 !bulldog-http-factory-zend-diactoros/composer.lock
 !bulldog-http-factory-zend-diactoros/phpunit.xml.dist
+
+aidphp-http/*
+!aidphp-http/composer.json
+!aidphp-http/composer.lock
+!aidphp-http/phpunit.xml.dist
+
+rancoud-http/*
+!rancoud-http/composer.json
+!rancoud-http/composer.lock
+!rancoud-http/phpunit.xml.dist
+
+viserio-http-factory/*
+!viserio-http-factory/composer.json
+!viserio-http-factory/composer.lock
+!viserio-http-factory/phpunit.xml.dist
