--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Zegnat/http-factory-tests"
+        }
+    ],
     "require": {
         "phpunit/phpunit": "^7.5",
-        "http-interop/http-factory-tests": "^0.5.0"
+        "http-interop/http-factory-tests": "dev-stream-tell-tests"
     },
     "scripts": {
         "test": [
